--- a/Presentation/OnionArchitecture.API/OnionArchitecture.API.csproj
+++ b/Presentation/OnionArchitecture.API/OnionArchitecture.API.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\OnionArchitecture.Application\OnionArchitecture.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\OnionArchitecture.Infrastructure\OnionArchitecture.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\OnionArchitecture.Persistence\OnionArchitecture.Persistence.csproj" />
   </ItemGroup>
 
