--- a/Presentation/OnionArchitecture.API/OnionArchitecture.API.csproj
+++ b/Presentation/OnionArchitecture.API/OnionArchitecture.API.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\..\Infrastructure\OnionArchitecture.Persistence\OnionArchitecture.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
